--- a/ALMACEN/ALMACEN.WebAdmin/ALMACEN.WebAdmin.csproj
+++ b/ALMACEN/ALMACEN.WebAdmin/ALMACEN.WebAdmin.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\DetalleSolicitudController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ServiciosController.cs" />
     <Compile Include="Controllers\SolicitudAduanaController.cs" />
     <Compile Include="Global.asax.cs">
@@ -211,6 +212,8 @@
     <Content Include="Views\DetalleSolicitud\Crear.cshtml" />
     <Content Include="Views\DetalleSolicitud\Eliminar.cshtml" />
     <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
+    <Content Include="Views\Shared\_LayoutLogin.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
